instance database endpoint

--- a/web/billing-app/apps/static/partials/usage/usage.html
+++ b/web/billing-app/apps/static/partials/usage/usage.html
@@ -41,11 +41,9 @@
           </select>
         </div>
 
-        <div class="col-md-1">
+        <div class="btn grp">
           <button type="button" class="btn btn-warning" style="margin-top:35px;" ng-click="getUsageTable()" ng-disabled="loading">Filter Results</button>
-        </div>
 
-        <div class="col-md-1">
           <button type="button" class="btn btn-warning" style="margin-top:35px;" ng-click="reset()" ng-disabled="loading">Reset Results</button>
         </div>
       </div>
