include fa as link for now

--- a/web/billing-app/apps/templates/instance/index.html
+++ b/web/billing-app/apps/templates/instance/index.html
@@ -3,6 +3,8 @@
 
 {% block customcss %}
   <link rel="stylesheet" href="/static/css/isteven-multi-select.css">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"></script>
+
 {% endblock %}
 
 {% block content %}
